test vertical align and wrapping fixes

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ table {
 
 .floater-container-top,
 .floater-container-bottom {
+    position: relative;
     width: 100%;
     height: 50%;
 }
@@ -126,7 +127,8 @@ table {
     background: white;
     opacity: 0.6;
     position: relative;
-    z-index: 1;
+    display: block;
+    z-index: 5;
     -webkit-shape-outside: polygon(50% 100%, 100% 100%, 62.61% 96%, 42.39% 83.67%, 26.24% 67.35%, 13.1% 48.94%, 4.03% 25.45%, 0% 0%, 0% 100%);
     shape-outside: polygon(50% 100%, 100% 100%, 62.61% 96%, 42.39% 83.67%, 26.24% 67.35%, 13.1% 48.94%, 4.03% 25.45%, 0% 0%, 0% 100%);
     -webkit-clip-path: polygon(50% 100%, 100% 100%, 62.61% 96%, 42.39% 83.67%, 26.24% 67.35%, 13.1% 48.94%, 4.03% 25.45%, 0% 0%, 0% 100%);
@@ -140,7 +142,8 @@ table {
     background: white;
     opacity: 0.6;
     position: relative;
-    z-index: 1;
+    display: block;
+    z-index: 5;
     -webkit-shape-: polygon(0% 0%, 41.36% 4%, 65.66% 22%, 81.83% 42%, 93.94% 68%, 100% 100%, 100% 0%);
     shape-outside: polygon(0% 0%, 41.36% 4%, 65.66% 22%, 81.83% 42%, 93.94% 68%, 100% 100%, 100% 0%);
     -webkit-clip-path: polygon(0% 0%, 41.36% 4%, 65.66% 22%, 81.83% 42%, 93.94% 68%, 100% 100%, 100% 0%);
@@ -155,11 +158,14 @@ table {
 }
 
 .right {
+    color: white;
     text-align: right;
 }
 
 .left {
+    color: white;
     text-align: left;
+    white-space: normal;
 }
 
 .neon-glow-button.right,
